--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -187,6 +187,7 @@ collections:
               - name: "exText"
                 label: "Experience/Work History Text"
                 widget: "markdown"
+                pattern: ['^.{20,1000}$', "Must have less than 2000 characters"]
       - label: "Cover Letter"
         name: "cover"
         file: "src/content/pages/about.md"
