--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sass": "^5.25.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-sitemap": "^3.1.0",
     "gatsby-plugin-styled-components": "^3.1.11",
@@ -65,6 +66,7 @@
     "react-share-social": "^0.1.48",
     "react-tabs": "^3.1.1",
     "react-timeago": "^6.2.1",
+    "sass": "^1.56.2",
     "simple-react-lightbox": "^3.6.9-0",
     "styled-components": "^4.4.1",
     "theme-ui": "^0.6.0",
