--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,4 +1,5 @@
 backend:
+  # name: test-repo
   name: git-gateway
   branch: main
   commit_messages:
@@ -10,7 +11,7 @@ backend:
 
 # Uncomment local_backend when you need to develop in your local
 local_backend: true # run npx netlify-cms-proxy-server for local testing
-logo_url: https://myresume-ex1.netlify.app/assets/logo.svg
+logo_url: https://toddlambert.myresume.site/assets/logo-long.webp
 media_folder: "static/assets"
 public_folder: "/assets"
 
@@ -114,13 +115,6 @@ collections:
           - { label: "Slug", name: "slug", widget: "hidden", default: "/" }
           - { label: "Page and SEO Title", name: "title", widget: "string" }
           - { label: "Tagline", name: "tagline", widget: "string" }
-          - { label: "Show Feature", name: "showFeature", widget: "boolean" }
-          - { label: "Show Info", name: "showInfo", widget: "boolean" }
-          - { label: "Show Posts", name: "showPosts", widget: "boolean" }
-          - { label: "Show Social Links", name: "showSocial", widget: "boolean", default: "true", required: false }
-          - { label: "Show Skills", name: "showSkills", widget: "boolean", default: "true", required: false }
-          - { label: "Show Resume", name: "showResume", widget: "boolean", default: "true", required: false }
-          - { label: "Show Cover Letter", name: "showCover", widget: "boolean", default: "true", required: false }
           - { label: "Featured Image", name: "featuredImage", widget: "image" }
           - { label: "YouTube Url", name: "youtuber", hint: "Add YouTube video to hero section", widget: "string", required: false }
           - { label: "Profile/Avatar", name: "secondaryImage", widget: "image", hint: "This is your profile picture or avatar", required: false }
@@ -130,10 +124,19 @@ collections:
           - { label: "Profile Title", name: "profTitle", widget: "string",
            required: false }
 
-          - { label: "Profile text (intro)", name: "profText", widget: "string", required: false }
+          - { label: "Profile text (intro)", name: "profText", widget: "markdown", required: false }
+
+          - { label: "Audio - YouTube Url", name: "youtuber2", hint: "Paste YouTube Url of song you wish to play on the site", widget: "string", required: false }
+          - { label: "Audio - Title", name: "audiotitle", hint: "Artist Name - Track Title", widget: "string", required: false }
 
           - { label: "Your Address", name: "addressText", widget: "string", required: false }
           - { label: "Your Address 2", name: "addressText2", widget: "string", required: false }
+
+          - { label: "Portfolio Quote - Opening", name: "openQuote", widget: "string",
+           required: false }
+
+          - { label: "Portfolio Quote - Closing", name: "closeQuote", widget: "string",
+           required: false }
 
 
           - { label: "Resume", name: "body", widget: "markdown" }
@@ -330,6 +333,35 @@ collections:
                 name: showfooter
                 label: Show the Footer
                 required: false
+              - widget: boolean
+                name: showFeature
+                label: Show Feature
+                required: false
+              - widget: boolean
+                name: showInfo
+                label: Show Profile
+                required: false
+              - widget: boolean
+                name: showPosts
+                label: Show Portfolio/Posts
+                required: false
+              - widget: boolean
+                name: showSocial
+                label: Show Social Links
+                required: false
+              - widget: boolean
+                name: showSkills
+                label: Show Skills
+                required: false
+              - widget: boolean
+                name: showResume
+                label: Show Resume
+                required: false
+              - widget: boolean
+                name: showCover
+                label: Show Cover Letter
+                required: false
+  
           - label: "Commenting – Go to: https://commentbox.io - sign up for free account "
             name: comments
             widget: string
